--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,15 @@ after_success:
   - docker push grantwilliams/multi-server
   - docker push grantwilliams/multi-worker
 
-deploy:
-  provider: elasticbeanstalk
-  region: eu-central-1
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-eu-central-1-945797084828
-  bucket_path: docker-multi
-  on:
-    branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY
+# deploy:
+#   provider: elasticbeanstalk
+#   region: eu-central-1
+#   app: multi-docker
+#   env: MultiDocker-env
+#   bucket_name: elasticbeanstalk-eu-central-1-945797084828
+#   bucket_path: docker-multi
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: $AWS_SECRET_KEY
